--- a/Soccer-Player-NN.ipynb
+++ b/Soccer-Player-NN.ipynb
@@ -111,11 +111,11 @@
     "nb_classes = 12\n",
     "model = Sequential()\n",
     "model.add(Dense(1024, input_dim=921, activation='relu'))\n",
-    "model.add(Dropout(0.5))\n",
+    "model.add(Dropout(0.2))\n",
     "model.add(Dense(512, activation='relu'))\n",
     "model.add(Dropout(0.1))\n",
     "model.add(Dense(256, activation='relu'))\n",
-    "# model.add(Dropout(0.25))\n",
+    "model.add(Dropout(0.05))\n",
     "model.add(Dense(128, activation='relu'))\n",
     "# model.add(Dropout(0.25))\n",
     "model.add(Dense(64, activation='relu'))\n",
@@ -144,31 +144,31 @@
       "Instructions for updating:\n",
       "Use tf.cast instead.\n",
       "Epoch 1/10\n",
-      "4850/4850 [==============================] - 7s 1ms/step - loss: 0.2292 - acc: 0.9160\n",
+      "4850/4850 [==============================] - 7s 1ms/step - loss: 0.2212 - acc: 0.9160\n",
       "Epoch 2/10\n",
-      "4850/4850 [==============================] - 4s 864us/step - loss: 0.2068 - acc: 0.9157\n",
+      "4850/4850 [==============================] - 4s 904us/step - loss: 0.1960 - acc: 0.9176\n",
       "Epoch 3/10\n",
-      "4850/4850 [==============================] - 4s 904us/step - loss: 0.2016 - acc: 0.9177\n",
+      "4850/4850 [==============================] - 5s 930us/step - loss: 0.1875 - acc: 0.9196\n",
       "Epoch 4/10\n",
-      "4850/4850 [==============================] - 4s 893us/step - loss: 0.2051 - acc: 0.9179\n",
+      "4850/4850 [==============================] - 4s 903us/step - loss: 0.1857 - acc: 0.9203\n",
       "Epoch 5/10\n",
-      "4850/4850 [==============================] - 4s 858us/step - loss: 0.2010 - acc: 0.9193\n",
+      "4850/4850 [==============================] - 4s 865us/step - loss: 0.1801 - acc: 0.9216\n",
       "Epoch 6/10\n",
-      "4850/4850 [==============================] - 4s 901us/step - loss: 0.1997 - acc: 0.9195\n",
+      "4850/4850 [==============================] - 4s 927us/step - loss: 0.1763 - acc: 0.9230\n",
       "Epoch 7/10\n",
-      "4850/4850 [==============================] - 4s 907us/step - loss: 0.1969 - acc: 0.9195\n",
+      "4850/4850 [==============================] - 5s 955us/step - loss: 0.1760 - acc: 0.9239\n",
       "Epoch 8/10\n",
-      "4850/4850 [==============================] - 5s 943us/step - loss: 0.1945 - acc: 0.9200\n",
+      "4850/4850 [==============================] - 5s 953us/step - loss: 0.1723 - acc: 0.9243\n",
       "Epoch 9/10\n",
-      "4850/4850 [==============================] - 5s 940us/step - loss: 0.1921 - acc: 0.9211\n",
+      "4850/4850 [==============================] - 4s 927us/step - loss: 0.1726 - acc: 0.9248\n",
       "Epoch 10/10\n",
-      "4850/4850 [==============================] - 5s 942us/step - loss: 0.1934 - acc: 0.9214\n"
+      "4850/4850 [==============================] - 4s 877us/step - loss: 0.1671 - acc: 0.9257\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f6b594c4410>"
+       "<keras.callbacks.History at 0x7f8eca28ba90>"
       ]
      },
      "execution_count": 7,
@@ -192,19 +192,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4.0802178e-01 5.0484490e-01 7.7668406e-02 ... 3.0472850e-06\n",
-      "  1.2473454e-08 9.0863299e-09]\n",
-      " [5.1655805e-01 4.4439891e-01 3.7374757e-02 ... 3.1577758e-07\n",
-      "  5.2386229e-10 3.8623940e-10]\n",
-      " [4.8281559e-01 4.5982048e-01 5.3551659e-02 ... 1.4132298e-06\n",
-      "  4.0247055e-09 3.1226051e-09]\n",
+      "[[4.07639854e-02 1.24706574e-01 3.01734537e-01 ... 6.86554858e-06\n",
+      "  4.86468309e-07 1.55040038e-06]\n",
+      " [5.32559335e-01 4.36409026e-01 3.06994412e-02 ... 3.46217114e-13\n",
+      "  5.23755606e-14 8.66412383e-14]\n",
+      " [5.09624660e-01 3.51843506e-01 1.14310868e-01 ... 4.94248252e-06\n",
+      "  2.67291171e-06 2.89314266e-06]\n",
       " ...\n",
-      " [3.4185416e-01 5.3282464e-01 1.0460607e-01 ... 5.7007078e-06\n",
-      "  3.2374274e-08 2.2015145e-08]\n",
-      " [4.8688957e-01 4.5751718e-01 5.2041162e-02 ... 1.2817227e-06\n",
-      "  3.5039112e-09 2.7165201e-09]\n",
-      " [2.8498763e-01 5.3467780e-01 1.3681675e-01 ... 1.0815006e-05\n",
-      "  7.9519069e-08 5.5597710e-08]]\n"
+      " [4.81708311e-02 1.35596961e-01 2.96843499e-01 ... 1.44529749e-05\n",
+      "  1.28101385e-06 3.70906378e-06]\n",
+      " [5.35143912e-01 3.36417377e-01 1.06975250e-01 ... 4.12774307e-06\n",
+      "  2.32212142e-06 2.46509353e-06]\n",
+      " [1.17443465e-02 3.24139781e-02 8.96830037e-02 ... 3.15717026e-03\n",
+      "  3.65061947e-04 5.27158147e-04]]\n"
      ]
     }
    ],
@@ -224,7 +224,7 @@
      "output_type": "stream",
      "text": [
       "[3 0 0 ... 2 0 5]\n",
-      "0.329207920792\n"
+      "0.463696369637\n"
      ]
     }
    ],
