--- a/Soccer-Player-NN.ipynb
+++ b/Soccer-Player-NN.ipynb
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "# fix random seed for reproducibility\n",
     "np.random.seed(0)\n",
-    "nb_classes = 12"
+    "nb_classes = 4"
    ]
   },
   {
@@ -60,8 +60,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 2 3 ... 5 2 1]\n",
-      "(4850, 921)\n"
+      "[1 1 1 ... 4 4 4]\n",
+      "(1141, 921)\n"
      ]
     }
    ],
@@ -108,7 +108,6 @@
    ],
    "source": [
     "# create model\n",
-    "nb_classes = 12\n",
     "model = Sequential()\n",
     "model.add(Dense(1024, input_dim=921, activation='relu'))\n",
     "model.add(Dropout(0.2))\n",
@@ -144,31 +143,31 @@
       "Instructions for updating:\n",
       "Use tf.cast instead.\n",
       "Epoch 1/10\n",
-      "4850/4850 [==============================] - 7s 1ms/step - loss: 0.2212 - acc: 0.9160\n",
+      "1141/1141 [==============================] - 3s 3ms/step - loss: 0.3607 - acc: 0.8510\n",
       "Epoch 2/10\n",
-      "4850/4850 [==============================] - 4s 904us/step - loss: 0.1960 - acc: 0.9176\n",
+      "1141/1141 [==============================] - 1s 818us/step - loss: 0.2485 - acc: 0.8883\n",
       "Epoch 3/10\n",
-      "4850/4850 [==============================] - 5s 930us/step - loss: 0.1875 - acc: 0.9196\n",
+      "1141/1141 [==============================] - 1s 836us/step - loss: 0.2051 - acc: 0.9069\n",
       "Epoch 4/10\n",
-      "4850/4850 [==============================] - 4s 903us/step - loss: 0.1857 - acc: 0.9203\n",
+      "1141/1141 [==============================] - 1s 824us/step - loss: 0.2064 - acc: 0.9043\n",
       "Epoch 5/10\n",
-      "4850/4850 [==============================] - 4s 865us/step - loss: 0.1801 - acc: 0.9216\n",
+      "1141/1141 [==============================] - 1s 854us/step - loss: 0.1949 - acc: 0.9102\n",
       "Epoch 6/10\n",
-      "4850/4850 [==============================] - 4s 927us/step - loss: 0.1763 - acc: 0.9230\n",
+      "1141/1141 [==============================] - 1s 863us/step - loss: 0.1755 - acc: 0.9213\n",
       "Epoch 7/10\n",
-      "4850/4850 [==============================] - 5s 955us/step - loss: 0.1760 - acc: 0.9239\n",
+      "1141/1141 [==============================] - 1s 829us/step - loss: 0.1550 - acc: 0.9347\n",
       "Epoch 8/10\n",
-      "4850/4850 [==============================] - 5s 953us/step - loss: 0.1723 - acc: 0.9243\n",
+      "1141/1141 [==============================] - 1s 830us/step - loss: 0.1628 - acc: 0.9240\n",
       "Epoch 9/10\n",
-      "4850/4850 [==============================] - 4s 927us/step - loss: 0.1726 - acc: 0.9248\n",
+      "1141/1141 [==============================] - 1s 859us/step - loss: 0.1508 - acc: 0.9347\n",
       "Epoch 10/10\n",
-      "4850/4850 [==============================] - 4s 877us/step - loss: 0.1671 - acc: 0.9257\n"
+      "1141/1141 [==============================] - 1s 863us/step - loss: 0.1514 - acc: 0.9321\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f8eca28ba90>"
+       "<keras.callbacks.History at 0x7fad7b9c0a10>"
       ]
      },
      "execution_count": 7,
@@ -192,19 +191,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4.07639854e-02 1.24706574e-01 3.01734537e-01 ... 6.86554858e-06\n",
-      "  4.86468309e-07 1.55040038e-06]\n",
-      " [5.32559335e-01 4.36409026e-01 3.06994412e-02 ... 3.46217114e-13\n",
-      "  5.23755606e-14 8.66412383e-14]\n",
-      " [5.09624660e-01 3.51843506e-01 1.14310868e-01 ... 4.94248252e-06\n",
-      "  2.67291171e-06 2.89314266e-06]\n",
+      "[[1.00000000e+00 2.32987674e-08 9.30320708e-13 3.38121449e-15]\n",
+      " [9.24138963e-01 7.37643465e-02 1.91605417e-03 1.80612959e-04]\n",
+      " [9.99999046e-01 9.48345928e-07 2.74663792e-10 2.91689307e-12]\n",
       " ...\n",
-      " [4.81708311e-02 1.35596961e-01 2.96843499e-01 ... 1.44529749e-05\n",
-      "  1.28101385e-06 3.70906378e-06]\n",
-      " [5.35143912e-01 3.36417377e-01 1.06975250e-01 ... 4.12774307e-06\n",
-      "  2.32212142e-06 2.46509353e-06]\n",
-      " [1.17443465e-02 3.24139781e-02 8.96830037e-02 ... 3.15717026e-03\n",
-      "  3.65061947e-04 5.27158147e-04]]\n"
+      " [9.99989748e-01 1.03019738e-05 1.04298676e-08 2.16292470e-10]\n",
+      " [8.79972875e-01 1.15617596e-01 3.97034455e-03 4.39187774e-04]\n",
+      " [9.99967098e-01 3.29406794e-05 5.32159561e-08 1.33487810e-09]]\n"
      ]
     }
    ],
@@ -223,8 +216,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3 0 0 ... 2 0 5]\n",
-      "0.463696369637\n"
+      "[0 1 0 0 0 0 1 1 0 1 0 0 0 0 3 1 0 0 0 0 0 1 0 1 1 1 0 0 0 0 0 0 0 0 1 0 2\n",
+      " 0 0 0 0 0 0 0 0 0 0 2 2 0 0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 1 0\n",
+      " 0 0 0 0 0 0 1 1 1 2 1 0 0 1 2 0 0 0 0 0 0 0 0 1 0 3 0 0 0 1 1 0 2 0 0 0 0\n",
+      " 0 1 0 2 0 0 0 2 0 0 0 0 1 2 0 1 0 1 1 2 0 0 0 0 0 0 1 0 2 0 0 3 1 0 0 1 0\n",
+      " 0 0 0 1 0 0 0 1 1 0 0 1 1 0 0 0 0 0 0 0 0 0 2 0 0 1 1 2 1 0 0 0 0 0 0 0 0\n",
+      " 0 0 2 0 0 0 0 0 3 0 0 1 0 0 0 0 0 0 1 2 0 0 0 3 2 0 0 0 0 0 1 2 0 0 1 0 0\n",
+      " 0 0 0 1 0 0 0 0 0 0 0 0 1 1 3 0 0 0 0 0 0 0 2 1 0 0 0 0 0 0 3 0 0 1 0 0 1\n",
+      " 0 0 1 1 0 0 0 0 0 0 1 2 0 3 0 0 1 0 1 0 1 0 1 0 2 0]\n",
+      "0.726315789474\n"
      ]
     }
    ],
@@ -246,18 +246,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1     387\n",
-      "2     309\n",
-      "3     150\n",
-      "4     107\n",
-      "6      96\n",
-      "5      75\n",
-      "7      35\n",
-      "8      28\n",
-      "9      12\n",
-      "11      6\n",
-      "10      6\n",
-      "12      1\n",
+      "1    202\n",
+      "2     55\n",
+      "3     20\n",
+      "4      8\n",
       "Name: Value, dtype: int64\n"
      ]
     }
@@ -278,7 +270,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3 0 0 ... 2 0 5]\n"
+      "[0 1 0 0 0 0 1 1 0 1 0 0 0 0 3 1 0 0 0 0 0 1 0 1 1 1 0 0 0 0 0 0 0 0 1 0 2\n",
+      " 0 0 0 0 0 0 0 0 0 0 2 2 0 0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 1 0\n",
+      " 0 0 0 0 0 0 1 1 1 2 1 0 0 1 2 0 0 0 0 0 0 0 0 1 0 3 0 0 0 1 1 0 2 0 0 0 0\n",
+      " 0 1 0 2 0 0 0 2 0 0 0 0 1 2 0 1 0 1 1 2 0 0 0 0 0 0 1 0 2 0 0 3 1 0 0 1 0\n",
+      " 0 0 0 1 0 0 0 1 1 0 0 1 1 0 0 0 0 0 0 0 0 0 2 0 0 1 1 2 1 0 0 0 0 0 0 0 0\n",
+      " 0 0 2 0 0 0 0 0 3 0 0 1 0 0 0 0 0 0 1 2 0 0 0 3 2 0 0 0 0 0 1 2 0 0 1 0 0\n",
+      " 0 0 0 1 0 0 0 0 0 0 0 0 1 1 3 0 0 0 0 0 0 0 2 1 0 0 0 0 0 0 3 0 0 1 0 0 1\n",
+      " 0 0 1 1 0 0 0 0 0 0 1 2 0 3 0 0 1 0 1 0 1 0 1 0 2 0]\n"
      ]
     }
    ],
