--- a/Soccer-Player-NN.ipynb
+++ b/Soccer-Player-NN.ipynb
@@ -308,13 +308,7 @@
       "913/913 [==============================] - 1s 587us/step - loss: 0.1829 - acc: 0.9250\n",
       "Epoch 6/10\n",
       "913/913 [==============================] - 1s 562us/step - loss: 0.1484 - acc: 0.9414\n",
-      "Epoch 7/10\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 7/10\n",
       "913/913 [==============================] - 1s 572us/step - loss: 0.1378 - acc: 0.9436\n",
       "Epoch 8/10\n",
       "913/913 [==============================] - 1s 576us/step - loss: 0.1610 - acc: 0.9324\n",
@@ -679,13 +673,7 @@
       "913/913 [==============================] - 1s 872us/step - loss: 0.1872 - acc: 0.9107\n",
       "Epoch 8/10\n",
       "913/913 [==============================] - 1s 896us/step - loss: 0.1512 - acc: 0.9326\n",
-      "Epoch 9/10\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 9/10\n",
       "913/913 [==============================] - 1s 933us/step - loss: 0.1336 - acc: 0.9439\n",
       "Epoch 10/10\n",
       "913/913 [==============================] - 1s 911us/step - loss: 0.1392 - acc: 0.9384\n",
@@ -1039,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1053,15 +1041,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1073,8 +1052,8 @@
     "plt.ylabel('Accuracy')\n",
     "\n",
     "plt.legend()\n",
-    "plt.show()\n",
-    "plt.savefig('./NN.png')"
+    "plt.savefig('./NN.png')\n",
+    "plt.show()"
    ]
   },
   {
